[package]
name = "pount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { package = "bevy", version = "0.13.2" }
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
# Enable this for fast builds - Dynamic link bevy libs
# Debugging in nvim via codelldb will break though, which can be fixed but im lazy
default = ["bevy/dynamic_linking"]
